{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "4eb03da7-841a-4915-b34d-cf922124fb1d",
            "actions": [
                {
                    "name": "Instruction1",
                    "type": "Button",
                    "id": "fa57f103-ab70-42f4-8eae-810795ccd5e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Instruction2",
                    "type": "Button",
                    "id": "976370cb-221e-4a07-9a30-0f01c6685900",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Instruction3",
                    "type": "Button",
                    "id": "23e46533-9a17-4677-beba-b1651487c613",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Instruction4",
                    "type": "Button",
                    "id": "61651767-729a-4ffc-a3c8-a36dfaa232d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Instruction5",
                    "type": "Button",
                    "id": "ee4cc84b-4a18-47c0-af73-026408ae764a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Instruction6",
                    "type": "Button",
                    "id": "4381c579-8a95-466c-b815-9d7f4e177291",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Instruction7",
                    "type": "Button",
                    "id": "ee3a0c78-f4e9-412a-89d9-625049f9069d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Instruction8",
                    "type": "Button",
                    "id": "e77a240d-8fc4-405c-b212-65bd751821f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSlot1",
                    "type": "Button",
                    "id": "b7baef12-09f9-4ee9-ac23-9543eb6eead3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSlot2",
                    "type": "Button",
                    "id": "a14dbc3c-1608-4390-a684-4fff598bab14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSlot3",
                    "type": "Button",
                    "id": "a47f0cfa-381d-4b6c-a8c8-08b7d2d42a5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSlot4",
                    "type": "Button",
                    "id": "e8850253-44f5-4a7f-b593-694784ffd86b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSlot5",
                    "type": "Button",
                    "id": "e65f887a-2990-47f3-bae2-8e48857c57a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSlot6",
                    "type": "Button",
                    "id": "1fbfd8de-86ae-49b6-bdeb-0d1a0c5eebb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSlot7",
                    "type": "Button",
                    "id": "71a8bcb7-757a-4aa6-9935-07f46033141e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSlot8",
                    "type": "Button",
                    "id": "de9c54b3-58b8-4638-b6eb-3018b6fd66de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSlot9",
                    "type": "Button",
                    "id": "bb6daefd-e5b1-45bd-89f8-8d5e18b72b01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemSlot0",
                    "type": "Button",
                    "id": "3e31b93c-9191-4007-8b3e-2fadfe9ef81b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "cdfa0440-2012-4dea-a37a-db07b0d31f6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "0b3d7909-cd07-46c7-a040-685e889cac47",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnUp",
                    "type": "Button",
                    "id": "4bbb8e35-685c-43e7-9061-ebca176f7f75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnDown",
                    "type": "Button",
                    "id": "13124aa1-7919-49c5-8aba-b3e9e20aa6cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "0faccb2c-e5c0-4722-97bf-f41bd00884ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "020abfe6-6083-46ec-9487-3aa2ecb330f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "055bd3b6-2c9b-46f6-921d-35f5df4130f9",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "ItemSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7758674-6c70-4fa9-8551-5cebdc997243",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09bf9d88-59b5-43d3-9c70-d0bb4397adc7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b334854f-0cd4-4206-ace7-b41c95c0e45a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eec34419-056a-4c06-a9ac-157d3d0af038",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "Instruction1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e952223-98fe-46eb-b747-72cf2c591c27",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "Instruction2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cfad492-75b9-4010-a191-d4564d323edc",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "Instruction3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7933b0e7-d17e-475f-b6c3-3bb6b71a623d",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "Instruction4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f30ca108-af2e-4baa-a609-08a8848da102",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "Instruction5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41412246-3bb9-402a-beba-d5e1e2dac06b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "Instruction6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fa182c1-32ba-4238-9c81-bb2e00b8381a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "Instruction7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8d18a1d-017e-496b-9c56-69c74041d6bd",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "Instruction8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6a790f5-db74-45fd-9093-9ca6c827b1f3",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "ItemSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "944d8c35-87a6-44fa-885a-a3746cf74971",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "ItemSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "781e57e3-a092-4334-91ac-33a2a7b5e568",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "ItemSlot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b1f372a-b335-47c5-8ed8-390c4fe625d4",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "ItemSlot5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0657fd3-805a-4b51-a37b-c504c7eb1792",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "ItemSlot6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f1ff4c1-bc5f-4847-9189-b2e697bc567f",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "ItemSlot7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e307ba9-ed2b-4a38-b572-69efcf8790c2",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "ItemSlot8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87a58a5b-36ae-44fc-ae14-70a7e786be33",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "ItemSlot9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78e30e86-08bb-4b4f-8cd7-771df702da06",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "ItemSlot0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ad77d7a-1437-4273-a66e-00baa5120579",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae47582c-64f1-483d-a1bd-9e26b8eb7b85",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "TurnUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03d1fd51-65ed-4468-84f4-18294ce633a7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Gamepad",
                    "action": "TurnDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "5fcbafae-ab88-4ee3-93c7-6c40ca33d1f3",
            "actions": [
                {
                    "name": "Navigate",
                    "type": "Value",
                    "id": "21a0d5eb-b5b8-44c0-840c-0d92504df067",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "ce1414e8-72a9-4869-bdd5-799643821223",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "ab41bb40-603b-44fe-82a0-4c534e19e603",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "5d906fbb-d21c-45c0-885c-0ce8b33c67bf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "9822b927-f006-4158-a954-6a7921d46d87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "928b2a70-e059-4985-b212-38b99c34f9e2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffb084eb-bccf-416e-83ba-a7819608f963",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8de36812-1d2d-4c3b-9797-d03aee6eea4e",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a5c6bdd-802f-4117-811e-cff1ecb4f711",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8da8270-fddc-4264-9ae4-a3a4347134b8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}